Muokattu 0.6 tekstin asettelua

--- a/osa0/6.md
+++ b/osa0/6.md
@@ -3,7 +3,9 @@ sequenceDiagram
     participant browser
     participant server
 
-    Note: Browser requests the server to add a new note with POST request. Request includes new note in JSON format. Because there is header called Content-type, the server knows that incoming data is in JSON format.
+    Note: Browser requests the server to add a new note with POST request. 
+    Request includes new note in JSON format. Because there is header called
+    Content-type, the server knows that incoming data is in JSON format.
 
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
     activate server
